--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,524 +1,596 @@
 hr {
-    opacity: 1;
+	opacity: 1
 }
 
-.sec1{
-    background:url(../images/bg--1.jpg);
-    padding: 20px;
-    height: 800px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.sec1 .matrix{
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight:bold;
-    color: #fff;
-}
-.sec1 .nav{
-    text-transform: capitalize;
-    color: #fff;
-    display: flex;
-    justify-content: space-evenly;
-}
-.sec1 .search{
-    height: 30px;
-    width: 30px;
-    background: red;
-}
-.sec1 .store{
-    height: 30px;
-    width: 30px;
-    background: red;
-}
-.sec1 .logo{
-    display: flex;
-    justify-content: space-evenly;
-}
-.sec1 .cc{
-    text-align: center;
-    color: #fff;
-    margin-top:200px;
-}
-.sec1 .c1{
-    text-transform: uppercase;
-    font-size: 35px;
-    font-weight: bold; 
-     
-}
-.sec1 .c2{
-    font-style: italic;
-}
-.sec1 button{    
-    text-align: center;
-    cursor: pointer;
-    border: #fff;
-}
+.sec1 {
+	background: url(../images/bg--1.jpg);
+	padding: 20px;
+	height: 800px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 
+	.matrix {
+		text-transform: uppercase;
+		font-size: 20px;
+		font-weight: bold;
+		color: #fff
+	}
 
+	.nav {
+		text-transform: capitalize;
+		color: #fff;
+		display: flex;
+		justify-content: space-evenly
+	}
+
+	.search {
+		height: 30px;
+		width: 30px;
+		background: red
+	}
+
+	.store {
+		height: 30px;
+		width: 30px;
+		background: red
+	}
+
+	.logo {
+		display: flex;
+		justify-content: space-evenly
+	}
+
+	.cc {
+		text-align: center;
+		color: #fff;
+		margin-top: 200px
+	}
+
+	.c1 {
+		text-transform: uppercase;
+		font-size: 35px;
+		font-weight: bold
+	}
+
+	.c2 {
+		font-style: italic
+	}
+
+	.learn {
+		background: #000000ea;
+		color: #fff;
+		border: 2px solid #00ee93;
+		padding: 10px 50px;
+		font-size: large;
+		text-transform: uppercase;
+		box-shadow: 0px 0px 15px 0px #00ee93;
+		
+		
+	}
+}
 
 .hr1 {
-    width: 200px;
-    border: 3px solid #2ecc71;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+	width: 200px;
+	border: 3px solid #2ecc71;
+	margin: auto;
+	margin-top: 10px;
+	margin-bottom: 10px
 }
 
 .sec2 {
-    padding: 50px 0;
-}
-.sec2 .c1 {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 120px;
+	padding: 50px 0;
 
-}
-.sec2 .img{
-    --w:350px;
-    width: var(--w);
-    height: var(--w);
-    background: url(../images/bg_img.jpg);
-    background-position: center;
-    box-shadow: -50px -50px 0 #2ecc71;
-    transform: translateX(120px) translateY(-25px);
-}
+	.c1 {
+		display: flex;
+		justify-content: center;
+		margin-bottom: 120px
+	}
 
-.sec2 .cc2 {
-    padding:30px 30px 0;
+	.img {
+		--w: 350px;
+		width: var(--w);
+		height: var(--w);
+		background: url(../images/bg_img.jpg);
+		background-position: center;
+		box-shadow: -50px -50px 0 #2ecc71;
+		transform: translateX(120px) translateY(-25px)
+	}
+
+	.cc2 {
+		padding: 30px 30px 0
+	}
+
+	.ab {
+		text-transform: capitalize;
+		font-weight: bold;
+		font-size: 34px
+	}
+
+	.icon {
+		background: #2ecc71;
+		height: 100px;
+		width: 100px;
+		border-radius: 50%
+	}
+
+	.a1 {
+		text-transform: capitalize;
+		font-size: 20px;
+		font-weight: bold
+	}
+
+	.work {
+		all: initial;
+		background: black;
+		color: #fff;
+		font-size: 18px;
+		font-family: sans-serif;
+		text-transform: capitalize;
+		padding: 10px 30px
+	}
 }
 
 .sec3 .cc3,
 .sec4 .cc4,
 .sec6 .cc6 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 55px 0;
-    
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 55px 0
 }
+
 .sec2 button,
 .sec3 button,
 .sec4 button,
 .sec6 button,
 .sec8 button {
-    background: #2ecc71;
-    padding: 15px 35px;
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 30px;
-    border: 0;
-    transform: skewY(-6deg);
-}
-.sec2 button p,
-.sec3 button p,
-.sec4 button p,
-.sec6 button p,
-.sec8 button p {
-    margin: 0;
-    transform: skewY(6deg);
-}
-.hr2{
-    width: 100px;
-    border: 3px solid #2ecc71;
-    /* margin: auto; */
-    margin-top: -11px;
-    margin-bottom: 16px;
-
-}
-.sec2 .ab{
-    text-transform: capitalize;
-    font-weight: bold;
-    font-size: 34px;
-}
-.para p{
-    text-transform: capitalize;
-}
-.para .p1{
-    font-weight: bold;
-}
-.para span{
-    text-transform: inherit;
-    font-family: monospace;
-}
-.sec2 .icon{
-    background:#2ecc71;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-}
-.sec2 .a1{
-    text-transform: capitalize;
-    font-size: 20px;
-    font-weight: bold;
-}
-.sec2 .work{
-    all: initial;
-    background: black;
-    color: #fff;
-    font-size: 18px;
-    font-family: sans-serif;
-    text-transform: capitalize;
-    padding: 10px 30px;
+	background: #2ecc71;
+	padding: 15px 35px;
+	color: #fff;
+	text-transform: capitalize;
+	font-size: 30px;
+	border: 0;
+	transform: skewY(-6deg)
 }
 
-.sec3 .c1 {
-    background: url(../images/bg01.jpg);
-}
-.sec3 .c2 {
-    background: url(../images/bg02.jpeg);
-}
-.sec3 .c3 {
-    background: url(../images/bg03.jpeg);
-}
-.sec3 .c4 {
-    background: url(../images/bg04.jpeg);
-}
-.sec3 .c5 {
-    background: url(../images/bg05.jpeg);
-}
-.sec3 .c6 {
-    background: url(../images/bg06.jpeg);
-}
-.sec3 .c7 {
-    background: url(../images/bg07.jpg);
-}
-.sec3 .c8 {
-    background: url(../images/bg08.jpg);
+.sec2 button span,
+.sec3 button span,
+.sec4 button span,
+.sec6 button span,
+.sec8 button span {
+	margin: 0;
+	transform: skewY(6deg)
 }
 
-.sec3 .cc {
-    --w: 300px;
-    height: var(--w);
-    background-size: cover;
+.hr2 {
+	width: 100px;
+	border: 3px solid #2ecc71;
+	margin-top: -11px;
+	margin-bottom: 16px
 }
 
-.sec3 .nav{
-    text-transform: capitalize;
-    color: #000;
-    display: flex;
-    justify-content: space-evenly;
-    width: 40%;
-    margin: auto;
-    padding: 30px 0;
-    
+.para {
+	.p {
+		text-transform: capitalize
+	}
+
+	.p1 {
+		font-weight: bold
+	}
+
+	.p span,
+	.p1 span {
+		text-transform: inherit;
+		font-family: monospace
+	}
 }
-.sec4 p {
-  margin: 0;
+
+.sec3 {
+	.c1 {
+		background: url(../images/bg01.jpg)
+	}
+
+	.c2 {
+		background: url(../images/bg02.jpeg)
+	}
+
+	.c3 {
+		background: url(../images/bg03.jpeg)
+	}
+
+	.c4 {
+		background: url(../images/bg04.jpeg)
+	}
+
+	.c5 {
+		background: url(../images/bg05.jpeg)
+	}
+
+	.c6 {
+		background: url(../images/bg06.jpeg)
+	}
+
+	.c7 {
+		background: url(../images/bg07.jpg)
+	}
+
+	.c8 {
+		background: url(../images/bg08.jpg)
+	}
+
+	.cc {
+		--w: 300px;
+		height: var(--w);
+		background-size: cover
+	}
+
+	.nav {
+		text-transform: capitalize;
+		color: #000;
+		display: flex;
+		justify-content: space-evenly;
+		width: 40%;
+		margin: auto;
+		padding: 30px 0
+	}
 }
+
 .sec4 {
-    text-align: center;
-    padding: 50px 0;
-}
-.sec4 .img {        
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.sec4 .main{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.sec4 .aa{
-    background:url(../images/railway.jpg);
-    height: 300px;
-    width: 300px;
-}
-.sec4 .aa1{
-    background:url(../images/library.jpg);
-    background-size: cover;
-    height: 300px;
-    width: 300px;
-}
-.sec4 .aa2{
-    background:url(../images/journey.jpg);
-    background-size: cover;
-    height: 300px;
-    width: 300px;
-    
-}
-.sec4 .railway,
-.sec4 .local,
-.sec4 .our{
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight:600;
-}
-.sec5{
-    background:#c6cfd6 ;
-}
-.sec5 .girl{
-    background:url(../images/bg--girl.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-}
-.sec6 {
-    padding: 50px 0 100px;
-}
-.sec5 .pg {
-    padding: 100px;
-}
-.sec6 .thomas{
-    background:url(../images/bg-thomas.jpg);
-}
-.sec6 .lilly{
-    background:url(../images/bg-lilly.jpg);
-}
-.sec6 .elizabeth{
-    background:url(../images/bg-elizabeth.jpg);
-}
-.sec6 .oliver{
-    background:url(../images/bg-oliver.jpg);   
-}
-.sec6 .img {
-    height: 300px;
-    width: 300px;
-    background-size: cover;
-    background-position: center;
-}
-.sec6 .team1,
-.sec6 .team2{
-    display: flex;
-    margin:10px 8px;
-    margin-bottom: 20px;
-}
-.sec6 .pr{
-    text-transform: capitalize;
-    font-size: 24px;
-    font-weight:500;
-    margin: 0;
-    padding: 0;
+	text-align: center;
+	padding: 50px 0;
 
+	.main p {
+		margin: 0
+	}
+
+	.img {
+		margin: auto;
+		margin-top: 20px;
+		margin-bottom: 20px
+	}
+
+	.main {
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly
+	}
+
+	.aa {
+		background: url(../images/railway.jpg);
+		height: 300px;
+		width: 300px
+	}
+
+	.aa1 {
+		background: url(../images/library.jpg);
+		background-size: cover;
+		height: 300px;
+		width: 300px
+	}
+
+	.aa2 {
+		background: url(../images/journey.jpg);
+		background-size: cover;
+		height: 300px;
+		width: 300px
+	}
+
+	.railway,
+	.local,
+	.our {
+		text-transform: uppercase;
+		font-size: 18px;
+		font-weight: 600
+	}
 }
-.sec6 .p_ {
-    text-transform: capitalize;
-    color: #c6c6c6;
-    margin: 0;
-    padding: 0;
+
+.sec5 {
+	background: #c6cfd6;
+
+	.girl {
+		background: url(../images/bg--girl.jpg);
+		background-size: cover;
+		background-position: center;
+		height: 600px
+	}
+
+	.pg {
+		padding: 100px
+	}
 }
-.sec6 .p--{
-    margin-top: 18px;
-    font-family:serif;
-    margin-bottom: 30px;
+
+.sec6 {
+	padding: 50px 0 100px;
+
+	.thomas {
+		background: url(../images/bg-thomas.jpg)
+	}
+
+	.lilly {
+		background: url(../images/bg-lilly.jpg)
+	}
+
+	.elizabeth {
+		background: url(../images/bg-elizabeth.jpg)
+	}
+
+	.oliver {
+		background: url(../images/bg-oliver.jpg)
+	}
+
+	.img {
+		height: 300px;
+		width: 300px;
+		background-size: cover;
+		background-position: center
+	}
+
+	.team1,
+	.team2 {
+		display: flex;
+		margin: 10px 8px;
+		margin-bottom: 20px
+	}
+
+	.pr {
+		text-transform: capitalize;
+		font-size: 24px;
+		font-weight: 500;
+		margin: 0;
+		padding: 0
+	}
+
+	.p_ {
+		text-transform: capitalize;
+		color: #c6c6c6;
+		margin: 0;
+		padding: 0
+	}
+
+	.p-- {
+		margin-top: 18px;
+		font-family: serif;
+		margin-bottom: 30px
+	}
 }
-.sec7{
-    background: url(../images/bg--sea2.jpg);
-    background-size: cover;
-    background-position: center;
-    padding: 40px;
-}
-.sec7 .cc7{
-    display: flex;
-    justify-content: space-evenly;
-}
-.sec7 .t1{
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: bolder;
-    color: #fff;
-}
-.sec7 .t2{
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: bolder;
-    font-family: cursive;
-    color: #fff;
-}
-.sec7 .t3{
-    text-transform: lowercase;
-    font-size: 20px;
-    font-family: cursive;
-    font-weight: bolder;
-    color: #fff;
-}
-.sec7 .t4{
-    text-transform:capitalize;
-    font-size: 20px;
-    font-weight: bolder;
-    color: #fff;
-}
-.sec7 .t5{
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: bolder;
-    color: #fff;
+
+.sec7 {
+	background: url(../images/bg--sea2.jpg);
+	background-size: cover;
+	background-position: center;
+	padding: 40px;
+
+	.cc7 {
+		display: flex;
+		justify-content: space-evenly
+	}
+
+	.t1 {
+		text-transform: uppercase;
+		font-size: 20px;
+		font-weight: bolder;
+		color: #fff
+	}
+
+	.t2 {
+		text-transform: uppercase;
+		font-size: 20px;
+		font-weight: bolder;
+		font-family: cursive;
+		color: #fff
+	}
+
+	.t3 {
+		text-transform: lowercase;
+		font-size: 20px;
+		font-family: cursive;
+		font-weight: bolder;
+		color: #fff
+	}
+
+	.t4 {
+		text-transform: capitalize;
+		font-size: 20px;
+		font-weight: bolder;
+		color: #fff
+	}
+
+	.t5 {
+		text-transform: uppercase;
+		font-size: 20px;
+		font-weight: bolder;
+		color: #fff
+	}
 }
 
 .sec8 {
-    padding: 100px 200px;
-    text-align: center;
-}
-.sec8 .p_x {
-    padding: 0 24px;
-}
+	padding: 100px 200px;
+	text-align: center;
 
-.sec8 .cc {
-    overflow: hidden;
-    background: #c6cfd6;
-}
+	.p_x {
+		padding: 0 24px
+	}
 
-.sec8 .c1 {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-}
-.sec8 .img1{
-    background: url(../images/bg-standart.jpg);
-} 
-.sec8 .img2{
-    background: url(../images/bg-premium.jpg);
-} 
- .sec8 .img3{
-    background: url(../images/bg-ultimate.jpg);
-} 
+	.cc {
+		overflow: hidden;
+		background: #c6cfd6
+	}
 
-.sec8 .img {
-   /* background: #000;
-   background: url(../images/bg--sea2.jpg);  */
-   background-size: cover;
-   /* background-repeat: no-repeat; */
-   height: 150px;
-   margin-top: -40px;
-}
-.sec8 .cc2 {
-    background: #eaeaea;
-    padding: 30px;
-    height: 400px;
-}
+	.c1 {
+		display: flex;
+		justify-content: center;
+		margin-bottom: 50px
+	}
 
-.sec8 .img,
-.sec8 .cc2 {
-    transform: skewY(-10deg);
-}
-.sec8 p {
-    transform: skewY(10deg);
-    margin-top: 10px;
-    color: #c4c4c4;
-}
+	.img1 {
+		background: url(../images/bg-standart.jpg)
+	}
 
-.sec8 h5 {
-    top: 26px;
-    left: 112px;
-    position: absolute;
-    margin-top: 50px;
-    color: #fff;
-    transform: skewY(10deg);
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
+	.img2 {
+		background: url(../images/bg-premium.jpg)
+	}
 
-.sec8 button {    
-    transform: skewY(10deg);
-    width: max-content;
-    text-align: center;
-    margin: auto;
-    font-size: medium;
-    font-weight: 600;
-    letter-spacing: 2px;
-    border-radius: 0;
-    padding: 6px 30px;
-}
-.sec8 button:hover { 
-    background: #fff;
-    color: #2ecc71;
-}
-.sec8 hr {
-    transform: skewY(10deg);
-    width: 35%;
-    border-color: #2ecc71;
-    border-width: 5px;
-    margin: auto;
-}
+	.img3 {
+		background: url(../images/bg-ultimate.jpg)
+	}
 
-.sec8 .pg {
-    font-size: 48px;
-    font-weight: 600;
-    text-transform: capitalize;
-    color: #000000aa;
-}
-.sec8 sup,
-.sec8 span {
-    font-size: 28px;
-}
+	.img {
+		background-size: cover;
+		height: 150px;
+		margin-top: -40px
+	}
 
+	.cc2 {
+		background: #eaeaea;
+		padding: 30px;
+		height: 400px
+	}
 
+	.img,
+	.cc2 {
+		transform: skewY(-10deg)
+	}
+
+	.container p {
+		transform: skewY(10deg);
+		margin-top: 10px;
+		color: #c4c4c4
+	}
+
+	.container h5 {
+		top: 26px;
+		left: 112px;
+		position: absolute;
+		margin-top: 50px;
+		color: #fff;
+		transform: skewY(10deg);
+		text-transform: uppercase;
+		letter-spacing: 3px
+	}
+
+	.container button {
+		transform: skewY(10deg);
+		width: max-content;
+		text-align: center;
+		margin: auto;
+		font-size: medium;
+		font-weight: 600;
+		letter-spacing: 2px;
+		border-radius: 0;
+		padding: 6px 30px
+	}
+
+	.container button:hover {
+		background: #fff;
+		color: #2ecc71
+	}
+
+	.container hr {
+		transform: skewY(10deg);
+		width: 35%;
+		border-color: #2ecc71;
+		border-width: 5px;
+		margin: auto
+	}
+
+	.pg {
+		font-size: 48px;
+		font-weight: 600;
+		text-transform: capitalize;
+		color: #000000aa
+	}
+
+	.container sup,
+	.container span {
+		font-size: 28px
+	}
+}
 
 .sec9 {
-    background: #000;
-    padding: 100px;
-    color: #fff;
+	background: #000;
+	padding: 100px;
+	color: #fff;
+
+	.myimg0 {
+		background: url(../images/railway.jpg)
+	}
+
+	.myimg1 {
+		background: url(../images/library.jpg)
+	}
+
+	.myimg2 {
+		background: url(../images/journey.jpg)
+	}
+
+	.myimg {
+		background-size: cover
+	}
+
+	.r1 {
+		margin-bottom: 20px
+	}
+
+	.img {
+		width: 248px;
+		background-position: center;
+		background-size: contain;
+		background-repeat: no-repeat
+	}
+
+	.cc1 {
+		display: flex
+	}
+
+	.p {
+		padding-left: 30px
+	}
+
+	.p1 {
+		text-transform: capitalize;
+		font-size: 20px;
+		font-weight: 200px
+	}
+
+	.bg {
+		background: url(../images/bg--02.jpeg)
+	}
+
+	.container button {
+		background: 0;
+		border: 0;
+		color: #fff;
+		text-transform: capitalize
+	}
+
+	.container hr {
+		width: 100%;
+		border: 2px solid #fff;
+		margin-top: -15px;
+		margin-bottom: 10px
+	}
 }
 
-.sec9 .myimg0 {
-    background: url(../images/railway.jpg);
-}
-.sec9 .myimg1 {
-    background: url(../images/library.jpg);
-}
-.sec9 .myimg2 {
-    background: url(../images/journey.jpg);
-}
-.sec9 .myimg {
-    background-size: cover;
-}
+@media(max-width:992px) {
+	.sec1 .nav {
+		flex-direction: column
+	}
 
-.sec9 .r1 {
-    margin-bottom: 20px;
-}
- 
-.sec9 .img {
-    width: 248px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-.sec9 .cc1 {
-    display: flex;
-}
-.sec9 .p {
-    padding-left: 30px;
-}
-.sec9 .p1 {
-    text-transform: capitalize;
-    font-size: 20px;
-    font-weight: 200px;
-}
-.sec9 .bg {
-    background: url(../images/bg--02.jpeg);
-}
-.sec9 button {
-    background: none;
-    border: none;
-    color: #fff;
-    text-transform: capitalize;
-}
+	.sec2 .img {
+		transform: translateX(80px)
+	}
 
-.sec9 hr {
-    width: 100%;
-    border: 2px solid #fff;
-    /* margin: auto; */
-    margin-top: -15px;
-    margin-bottom: 10px;
-}
+	.sec7 .cc7 {
+		flex-direction: column;
+		text-align: center
+	}
 
-@media (max-width:992px) {
-    .sec1 .nav{
-        flex-direction: column;
-    }
-    .sec2 .img { 
-        transform: translateX(80px);
-    }
-    .sec7 .cc7 {
-        flex-direction: column;
-        text-align: center;
-    }
-    .sec8 .cc {
-        margin-bottom: 20px;
-    }
-    .sec8 {
-        padding: 100px 50px;
-    }
+	.sec8 {
+		padding: 100px 50px;
+
+		.cc {
+			margin-bottom: 20px
+		}
+	}
 }
